<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    app:cardElevation="0dp"
    android:theme="@style/Theme.AppCompat.Light">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_member"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDividerLight"
            android:layout_marginTop="8dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialogSearchMemberTIL"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            style="@style/Widget.Design.TextInputLayout"
            android:hint="@string/user_email"
            android:layout_marginTop="16dp"
            android:theme="@style/AppTheme">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialogSearchMemberTIET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp">
            <TextView
                android:id="@+id/dialogSearchMemberAddTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/add2"
                android:textColor="@color/colorBlue"
                android:gravity="center"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/dialogSearchMemberCancelTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>