<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background = "@drawable/grad_background"
    tools:context=".activities.SignInActivity">
    <androidx.appcompat.widget.Toolbar
        android:id = "@+id/tb_signIn"
        android:layout_width = "match_parent"
        android:layout_height = "?android:attr/actionBarSize"
        android:theme = "@style/customToolBarStyle"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/signinDesc"
            android:textColor="@color/colorFont"
            android:textSize="18sp"
            android:fontFamily="@font/robotolight"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:layout_above="@id/cv_signIn"
            android:layout_marginBottom="60dp"/>
        <androidx.cardview.widget.CardView
            android:id = "@+id/cv_signIn"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="20dp"
            android:theme="@style/AppTheme">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:id = "@+id/til_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_email"
                    android:layout_marginTop="16dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:fontFamily="@font/robotomedium"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id = "@+id/til_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_password"
                    android:layout_marginTop="16dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:fontFamily="@font/robotomedium"/>
                </com.google.android.material.textfield.TextInputLayout>
                <androidx.appcompat.widget.AppCompatButton
                    android:id = "@+id/btn_signIn"
                    android:layout_width = "300dp"
                    android:layout_height = "wrap_content"
                    android:layout_gravity = "center"
                    android:background = "@drawable/shape_button_round_grad"
                    android:text = "@string/signin"
                    android:textColor="@color/white"
                    android:letterSpacing = ".1"
                    android:layout_marginTop="32dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>
</LinearLayout>