<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.MyProfileActivity"
    android:background="@drawable/grad_background">
    <androidx.appcompat.widget.Toolbar
        android:id = "@+id/tb_myProfileActivity"
        android:layout_width = "match_parent"
        android:layout_height = "?android:attr/actionBarSize"
        android:theme = "@style/customToolBarStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.cardview.widget.CardView
        android:theme="@style/AppTheme"
        android:id = "@+id/cv_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/tb_myProfileActivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="80dp"
            android:paddingBottom="80dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_myProfileImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginBottom="32dp"
                android:src="@drawable/profile_placeholder"
                app:civ_border_color="@color/colorBlue"
                app:civ_border_width="2dp" />
            <LinearLayout
                android:id = "@+id/ll_myProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:id = "@+id/til_myProfileName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_myProfileName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        android:fontFamily="@font/robotomedium"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id = "@+id/til_myProfileEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_email"
                    android:layout_marginTop="16dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_myProfileEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:fontFamily="@font/robotomedium"
                        android:focusable="false"
                        android:focusableInTouchMode="false"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id = "@+id/til_myProfileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_number"
                    android:layout_marginTop="16dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_myProfileNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:fontFamily="@font/robotomedium"/>
                </com.google.android.material.textfield.TextInputLayout>
                <androidx.appcompat.widget.AppCompatButton
                    android:id = "@+id/btn_myProfileUpdate"
                    android:layout_width = "300dp"
                    android:layout_height = "wrap_content"
                    android:layout_gravity="center"
                    android:background = "@drawable/shape_button_round_grad"
                    android:text = "@string/update"
                    android:textColor="@color/white"
                    android:letterSpacing = ".1"
                    android:layout_marginTop="32dp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>